--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ node_modules/
 site/node_modules/
 apps/backend/node_modules/
 site/dist/
-logs/tests/
+logs/tests/*
+!logs/tests/README.md
 .env
 pnpm-lock.yaml
