--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "type": "module",
   "scripts": {
     "lint": "pnpm exec biome check apps docs scripts",
-    "test": "pnpm run test:remote && pnpm run test:tmux && node tests/e2e/telemetry.spec.mjs",
+    "test": "pnpm run test:remote && pnpm run test:maverick && pnpm run test:tmux && node tests/e2e/telemetry.spec.mjs",
     "test:tmux": "tests/tmux/start.test.sh",
     "test:remote": "tests/git/remote.test.sh",
+    "test:maverick": "tests/prompts/maverick_ready.test.sh",
     "docs:dev": "pnpm --dir site install --shamefully-hoist && pnpm --dir site run dev",
     "docs:build": "pnpm --dir site install --shamefully-hoist && pnpm --dir site run build"
   },
